crates/apollo-compiler/test_data/diagnostics/0059_root_operation_object_type.txt
Error: `SomeInterface` field must return an object type
   ╭─[0059_root_operation_object_type.graphql:2:5]
   │
 2 │     query: SomeInterface
   │     ──────────┬─────────  
   │               ╰─────────── This is an interface
   │ 
   │ Help: root operation type must be an object type
───╯

